# deal_desk_os

./: .gitignore  DEVOPS_VALIDATION_REPORT.md  Dockerfile.prod  README.md  browser_testing_validation.md  comprehensive_browser_test_report.md  docker-compose.prod.yml  pyproject.toml  security-scan-results.json  test_e2e_comprehensive.py  test_results.json
.github/workflows/: ci-cd.yml
client/: index.html  package.json  pnpm-lock.yaml  test_browser_e2e.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: ProtectedRoute.tsx
client/src/hooks/: useAuth.tsx  useDashboardMetrics.ts  useDeals.ts  usePolicies.ts
client/src/pages/: DashboardPage.tsx  DealDetailsPage.tsx  DealsPage.tsx  LoginPage.tsx  PolicyEditorPage.tsx  PolicyManagement.tsx
client/src/styles/: app.css
client/src/types/: policy.ts
config/: nginx.conf
scripts/: backup.sh  deploy.sh
server/: backend_test_summary.py  test_backend_comprehensive.py  test_backend_core.py  test_backend_final.py  test_backend_functionality.py  test_config_validation.py  test_n8n_adapter.py  test_policy_system.py  test_sla_dashboard.py
server/app/: __init__.py  main.py
server/scripts/: setup_sla_dashboard.py
server/tests/: conftest.py  pytest.ini  run_tests.py  test_data_generation.py  test_end_to_end_workflows.py  test_evidence_harness.py  test_performance_load.py  test_policy_editor_functionality.py  test_security_compliance.py  test_sla_kpi_validation.py
shared/contracts/: analytics.ts  deal.ts  user.ts
shared/policies/: pricing_policy_v1.json
(+93 files in other folders)
